fixtures/external/negative/contracts-import/runtime.mjs
// The negative-fixture harness expects this script itself to fail.
await import('@mog-sdk/spreadsheet-contracts');
